[gd_scene load_steps=12 format=2]

[ext_resource path="res://room_grow_test/room_growth_test.gd" type="Script" id=1]
[ext_resource path="res://room_grow_test/display_data.gd" type="Script" id=2]
[ext_resource path="res://room_grow_test/build_floor.gd" type="Script" id=3]
[ext_resource path="res://room_grow_test/windows/window1.tscn" type="PackedScene" id=4]
[ext_resource path="res://room_grow_test/spawn_gen.gd" type="Script" id=5]
[ext_resource path="res://room_grow_test/window_points.gd" type="Script" id=6]
[ext_resource path="res://room_grow_test/random_points.gd" type="Script" id=7]
[ext_resource path="res://room_grow_test/spawn_check.gd" type="Script" id=8]
[ext_resource path="res://room_grow_test/inside_walls.gd" type="Script" id=9]
[ext_resource path="res://room_grow_test/walls_distance.gd" type="Script" id=10]
[ext_resource path="res://room_grow_test/point_grid.gd" type="Script" id=11]

[node name="room_growth_test" type="Node2D"]
script = ExtResource( 1 )

[node name="display_data" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 1024.0
script = ExtResource( 2 )

[node name="build_floor" type="Node" parent="."]
script = ExtResource( 3 )
windows = [ ExtResource( 4 ) ]

[node name="windows" type="Node" parent="build_floor"]

[node name="spawn_gen" type="Node" parent="build_floor"]
script = ExtResource( 5 )

[node name="window_points" type="Node" parent="build_floor/spawn_gen"]
script = ExtResource( 6 )

[node name="random_points" type="Node" parent="build_floor/spawn_gen"]
script = ExtResource( 7 )

[node name="spawn_check" type="Node" parent="build_floor"]
script = ExtResource( 8 )

[node name="inside_walls" type="Node" parent="build_floor/spawn_check"]
script = ExtResource( 9 )

[node name="walls_distance" type="Node" parent="build_floor/spawn_check"]
script = ExtResource( 10 )

[node name="point_grid" type="Node" parent="build_floor"]
script = ExtResource( 11 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -43, -45, -27, -65, 5, -65, 5, -45, 76, -45, 77, 53, 37, 45, 34, 11, -17, 8, -24, 51, -59, 46, -56, -3, -90, -7, -90, -46 )
color = Color( 0.168627, 0.309804, 0.596078, 1 )

